@@ -6,6 +6,8 @@ Changes in Shorewall 4.4.10
 
 3)  Implement Shorewall-init.
 
+4)  Add SAFESTOP option to /etc/default/shorewall*
+
 Changes in Shorewall 4.4.9
 
 1)  Auto-detection of bridges.
